<resources>
    <string name="app_name">Needs Ver.2</string>
    <string name="menu_supermarket">Supermarket</string>
    <string name="register">Feeling lonely? Click Here to Register</string>
    <string name="forget_password">Forgot your password ?</string>
    <string name="back_to_login">Go back to Login</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="phone_number">phone number</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="re_password">re - password</string>
    <string name="verification_code">Send verification code via : </string>
    <string name="email_button">EMAIL</string>
    <string name="sms_button">SMS</string>
    <string name="code_hint">XXXXX</string>
    <string name="verification_button">VERIFY CODE</string>
    <string name="q_send_again_verification">Didn`t receive any message ? click here to send again</string>
    <string name="send_again_verification">Your verification code has been sent</string>
    <string name="one">fragment pertama</string>
    <string name="category">Pilih Kategori</string>

    <!--string values for main menu-->
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="two">fragment kedua</string>
    <string name="three">fragment ketifa</string>
    <string name="four">Fragment keempat</string>
    <string name="tambah_keranjang">Tambahkan ke Keranjang</string>
    <string name="pilih_kecamatan">Tetapkan Lokasi Pengiriman</string>
    <string name="alamat">Pilih Alamat Pengiriman</string>
    <string name="hint_kecamatan">masukkan kecamatan pengiriman</string>
    <string name="lanjutkan_belanja">Lanjutkan Belanja</string>
    <string name="shopping_cart">Add to cart</string>
    <string name="action_settings">Setting</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_hp_gudang">0848484245</string>
    <string name="supermarket">Supermarket</string>
    <string name="ticket">Tiket dan Hotel</string>
    <string name="foods">Foods</string>
    <string name="taxi">Taxi dan Ojek</string>
    <string name="transaksi">Transaksi</string>
    <string name="data_penerima">Data Penerima</string>
    <string name="nama_user">Carson</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="nama_product">Nama Produk</string>
    <string name="harga">Rp 10.000</string>
    <string name="rating_count">( 10 orang )</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="isi_deskripsi">Produk ini adalah produk minuman yang tidak utuk diminum jadi jangan sampai dicoba ya</string>
    <string name="ulasan">Ulasan</string>
    <string name="show_promo">Lihat semua promo</string>
    <string name="promo">Promo</string>
    <string name="shop_now">Belanja Sekarang</string>
    <string name="end_promo">Masa Promo</string>
    <string name="thanks">Selamat transaksi anda telah berhasil</string>


</resources>
