<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="antera.needsver2.supermarket.ItemViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/empty_app_bar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:background="@drawable/rect"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/tv_nama_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_product"
                android:textColor="@color/mdtp_light_gray"
                android:textSize="@dimen/text_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:text="@string/harga"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4.4"
                    android:stepSize="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_count" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    tools:listitem="@layout/pager_item" />

                <RelativeLayout
                    android:id="@+id/viewPagerIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/viewPagerCountDots"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:orientation="horizontal" />

                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:background="@drawable/rect"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/product_margin"
                android:text="@string/deskripsi"
                android:textColor="@color/mdtp_light_gray"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/product_margin"
                android:text="@string/isi_deskripsi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:background="@drawable/rect"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/product_margin"
                android:text="@string/ulasan"
                android:textColor="@color/mdtp_light_gray"
                android:textSize="@dimen/text_medium" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_ulasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
