<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="antera.needsver2.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <include
            android:id="@+id/empty_app_bar"
            layout="@layout/empty_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </include>

        <LinearLayout
            android:id="@+id/verification_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/empty_app_bar"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="Send Verification Code Via" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_il"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_layout_bg">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="OR" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_text_il"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="@drawable/white_layout_bg">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send_code"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="SEND VERIFICATION CODE" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/verification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/verification_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/inputCode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_layout_bg"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:hint="@string/code_hint"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_verify_code"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/verification_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/q_send_again_verification" />

        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
