<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="antera.needsver2.supermarket.DetailPromoActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/empty_app_bar"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_padding"
                android:background="@drawable/white_layout_bg"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <ImageView
                    android:id="@+id/iv_det_promo_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_promotion_height"
                    android:src="@drawable/ramadhan_sale"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv_det_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_det_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_padding"
                android:background="@drawable/white_layout_bg"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/deskripsi"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_det_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_padding"
                android:background="@drawable/white_layout_bg"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/end_promo"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_det_valid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/text_medium" />

                <Button
                    android:id="@+id/btn_show_promo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_now"/>


            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
